# Music-Bot

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image-ci.yml
src/: main.rs  run
src/commands/: disconnect.rs  join.rs  mod.rs  play.rs
src/lib/: helper.rs  mod.rs  msg.rs
