[package]
name = "punk_bot"
version = "0.1.0"
authors = ["sasjafor <john93412@gmail.com>"]

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
# google-youtube3 = "*"
# hyper = "^0.10"
# hyper-rustls = "^0.6"
# serde = "^1.0"
# serde_json = "^1.0"
# yup-oauth2 = "^1.0"
# untrusted = "^0.5"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "cache",
    "voice",
    "native_tls_backend",
]
version = "0.8.0"
