[package]
name = "music_bot"
version = "0.2.0"
authors = ["sasjafor <john93412@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
codegen-units = 1

[dependencies]
log = "0.4.8"
env_logger = "0.9.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
tracing-futures = "0.2.5" #

# hyper = "^0.10"
# hyper-rustls = "^0.6"
# serde = "^1.0"
# serde_json = "^1.0"
# yup-oauth2 = "^1.0"
# untrusted = "^0.5"

[dependencies.tokio]
version = "1.8.1"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "cache",
    "voice",
    "native_tls_backend",
]
version = "0.10.8"

[dependencies.songbird]
features = ["builtin-queue"]
version = "0.2.0"
